# cam-scanner

./: .gitignore  .pylintrc  Makefile  README.md  build.sh  make.sh  skaffold.yaml
api-python/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api-python/documentation/apis/: APIDoc.md
api-python/proto/: ImageProcessRequest_pb2.py
api-python/src/: main.py
api-python/src/controllers/: index.py
api-python/src/system/: discovery.py
api-python/src/templates/: index.html
api-python/tests/: test_create_app.py
image-proccessing/: Dockerfile  Makefile  README.md  pyproject.toml
image-proccessing/src/: hearbeat.py  main.py  processing.py  servicer.py
image-proccessing/tests/image_processing/: test_processing.py
k8s/: api.yaml  ip.yaml
protobuf-definition/: ImageProcessRequest.proto
src/image_processing/: main.py
src/proto/: ImageProcessRequest_pb2_grpc.py  README.md
src/web/: main.py  service_discovery.py
src/web/controllers/: index.py
tests/image_processing/: test_processing.py
