[tool.poetry]
name = "image-proccessing"
version = "0.1.0"
description = ""
authors = ["Stephen Truong Trung Hieu <trunghieu.truong.bit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.0"
grpcio = "^1.19"
numpy = "^1.16"
grpcio-tools = "^1.19"
python-dotenv = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
